--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "16.16.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
